# SYJ-SCHOLAR-AI

./: .gitignore  LICENSE  README.md  install.sh  main.py  pyproject.toml  requirements.txt  sample.txt  setup.py  test.html  test.md
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  MODELS.md  PLUGINS.md  TERMUX_SETUP.md
plugins/example_plugin/: plugin.py
scholar/: __init__.py  __main__.py
scholar/ai/: __init__.py  engine.py  hf_provider.py  ollama_provider.py  prompts.py
scholar/core/: __init__.py  cli.py  config.py  database.py  plugins.py  updater.py
scholar/exam/: __init__.py  prep.py
scholar/exports/: __init__.py  exporter.py  html_renderer.py
scholar/flashcards/: __init__.py  manager.py
scholar/notes/: __init__.py  formatter.py
scholar/pdf/: __init__.py  reader.py
scholar/quiz/: __init__.py  runner.py
scholar/ui/: __init__.py  dashboard.py  progress.py  renderer.py  theme.py
scholar/ui/assets/: style.css
scholar/ui/templates/: report.html
scholar/utils/: __init__.py  helpers.py  logger.py  paths.py
tests/: conftest.py  test_config.py  test_database.py  test_engine.py  test_exam_prep.py  test_exporter.py  test_flashcard_manager.py  test_helpers.py  test_notes_formatter.py  test_ollama_provider.py  test_pdf_reader.py  test_prompts.py  test_quiz_runner.py
