[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name            = "syj-scholar-ai"
version         = "1.0.0"
description     = "Your Offline AI Study Companion"
readme          = "README.md"
license         = {text = "MIT"}
requires-python = ">=3.9"
authors         = [{name = "SHalimoosavi", email = "scholar@syj.dev"}]
keywords        = ["study", "ai", "pdf", "termux", "android", "offline", "education"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage   = "https://github.com/SHalimoosavi/SYJ-SCHOLAR-AI/"
Repository = "https://github.com/SHalimoosavi/SYJ-SCHOLAR-AI/"
Issues     = "https://github.com/SHalimoosavi/SYJ-SCHOLAR-AI/issues"

[project.scripts]
scholar = "main:app"

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes= ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --tb=short --no-header"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ── ruff (linter) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PT"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in Typer)
    "N806",   # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

# ── black (formatter) ─────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py39", "py310", "py311", "py312"]
skip-string-normalization = false

# ── mypy (type checker) ───────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.9"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true   # many deps lack stubs
